Mon Nov  9 23:13:28 1998  Ovidiu Predescu  <ovidiu@slip.net>

	* debugapp.in: Added support for fd-xraw.
	* openapp.in: Likewise.
	* test-library.make: Use :: for the $(TEST_LIBRARY_NAME) target.
	* test-tool.make: Likewise for the $(TEST_TOOL_NAME) target.

Fri Jun  5 02:40:11 1998  Ovidiu Predescu  <ovidiu@aracnet.com>

	* GNUstep.csh.in: Use braces around variables.
	* target.make: Added support for AIX 4.1.

Tue May 26 16:01:37 1998  Ovidiu Predescu  <ovidiu@aracnet.com>

	* bundle.make (internal-bundle-install): Don't remove the
 	installed bundle if it exists to avoid removing other binaries
 	already installed.
	* test-tool.make (internal-testtool-uninstall): New target.

Mon Nov  9 16:34:20 1998  Adam Fedor  <fedor@doc.com>

	* configure.in: Don't assume . in path (Fix from Christopher
	Seawood <cls@seawood.org>).

Fri Nov  6 13:15:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* target.make: If objc library built with threads, assume we need to
	link with -lpthread on linux.

Tue Nov  3 10:30:12 1998  Adam Fedor  <fedor@doc.com>

	* target.make (netbsd): New (attempt at) shared lib target.

Wed Oct 21 21:00:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* target.make: Add -rdynamic to ld flags on linux so that bundles
	work correctly.

Mon Oct  5 09:12:41 1998  Adam Fedor  <fedor@ultra.doc.com>

	* GNUstep.csh.in: Fix up syntax problems (from Don Bottstein
	<donh@mapquest.com>).

Mon Sep 14 11:28:26 1998  Adam Fedor  <fedor@ultra.doc.com>

	* ld_lib_path.sh: Add quotes around *_LIBRARY_PATH (patch from
	doko@cs.tu-berlin.de (Matthias Klose)).

Thu Sep  3 15:19:57 1998  Adam Fedor  <fedor@ultra.doc.com>

	* configure.in: Check for DPS.
	* config.make.in: Add DPS_DEFINE.

Tue Aug 25 10:02:03 1998  Adam Fedor  <fedor@doc.com>

	* openapp.in, debugapp.in: Fix typo. (patch from
	doko@cs.tu-berlin.de (Matthias Klose)).
	* GNUstep.csh.in: Add GNUSTEP_BUILD_ROOT for building GNUstep.
	* GNUstep.sh.in: Likewise.
