@@ -59,8 +59,12 @@ TAR		= tar
 # The default library combination
 default_library_combo = @ac_cv_library_combo@
 
-# Is libobjc threaded?
-objc_threaded = @objc_threaded@
+#
+# Do threading stuff.
+#
+ifndef objc_threaded
+  objc_threaded:=@objc_threaded@
+endif
 
 #
 # X Window System headers and libraries
